<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.project.firechat.activities.RegisterActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundreg" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/emailText"
        android:layout_centerVertical="true"
        android:background="@drawable/username"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_alignStart="@+id/passwordText"
        android:layout_alignTop="@+id/userNameText"
        android:layout_marginTop="49dp"
        android:background="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_below="@+id/searchBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-146dp"
        android:background="@drawable/button"
        android:text="@string/back"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:visibility="gone" />

</RelativeLayout>
