<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.project.firechat.activities.SettingsActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/backgoundpic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_below="@+id/emailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/defaultProfile"
        app:layout_constraintBottom_toTopOf="@+id/changeImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/defaultprofile" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameText"
        android:layout_alignBottom="@+id/userNameText"
        android:layout_alignEnd="@+id/statusUpdateText"
        android:layout_marginBottom="9dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/userNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeImageBtn"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="172dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/imageView"
        android:text="@string/userName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/statusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/emailText"
        android:layout_alignBottom="@+id/emailText"
        android:layout_alignStart="@+id/userNameText"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/status"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/statusUpdateText"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/statusUpdateText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/shareBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusUpdateText" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/shareBtn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />

    <EditText
        android:id="@+id/statusUpdateText"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_above="@+id/saveBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/trans_white"
        android:ems="10"
        android:hint="@string/statusUpdate"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />

    <Button
        android:id="@+id/changeImageBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/button"
        android:text="@string/changeImage"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</android.support.constraint.ConstraintLayout>
